
This file shows the changes in recent releases of MODX. The most current release is usually the
development release, and is only shown to give an idea of what's currently in the pipeline.

- Add context key to reload URL when switching templates [#14998]
- Fix package dependency restrictions not working [#14904]
- Fix fatal error when updating a git alpha1 install without running composer update [#14996]
- Fix positioning of reset-to-default button on TVs [#14686]
- Change style for uninstalled packages in the package manager [#14686]
- Improve modal styling with more padding around buttons [#14978]
- Fix resource drag & drop ordering [#14987]

MODX Revolution 3.0.0-alpha2 (January 28, 2020)
====================================
- Add header breadcrumbs throughout manager [#14890]
- Remove modAction and legacy controller support [#14927]
- Apply `MODx.util.safeHtml` to feed dashboards [#14946]
- Fixed transparency in .png for TV [#14906]
- Add missing unsigned attribute to integer foreign key fields in mysql schema [#14902]
- Remove legacy grids [#14875]
- Change the way deprecated class aliases are included [#14912]
- Make sure processors are instantiated with getInstance for derivative logic [#14921]
- Add updated DI Container and add support for namespaces to define a bootstrap.php file to init/register services [#14920]
- Fix resources showing twice in the tree when marking a resource as deleted from the resource panel [#14893]
- Remove actions icon for the list of permissions in a policy [#14936]
- Fix invalid media source path causing root to be shown [#14024, #14038]

MODX Revolution 3.0.0-alpha1 (December 12, 2019)
====================================
- Fix deprecation warnings on curly brace string offset access syntax for PHP 7.4 compatibility [#14863]
- Format timestamp to date & time in edit file panel [#14883]
- Add links to grid items in manager [#14864]
- Fix stretched user avatars in dashboard widgets [#14840]