@@ -2,6 +2,7 @@
 This file shows the changes in recent releases of MODX. The most current release is usually the
 development release, and is only shown to give an idea of what's currently in the pipeline.
 
+- Use single-quotes in MySQL queries for modTransportPackage for ANSI_QUOTES compatibility [#15011]
 - Add context key to reload URL when switching templates [#14998]
 - Fix package dependency restrictions not working [#14904]
 - Fix fatal error when updating a git alpha1 install without running composer update [#14996]
